// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ghost going down puts label above it 1`] = `
<svg
  style={
    Object {
      "height": 36,
      "width": 40,
    }
  }
  viewBox="-20 -23.5 40 36"
>
  <g
    className="m-vehicle-icon m-vehicle-icon--medium ghost"
  >
    <rect
      className="m-vehicle-icon__label-background"
      height={11}
      rx={5.5}
      ry={5.5}
      width={40}
      x={-20}
      y={-22.5}
    />
    <text
      className="m-vehicle-icon__label m-vehicle-icon__label--normal"
      dominantBaseline="central"
      textAnchor="middle"
      x="0"
      y={-17}
    >
      ghost
    </text>
    <g
      transform="scale(0.4375) translate(-24,-23)"
    >
      <path
        className="m-vehicle-icon__ghost-highlight"
        d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
        stroke-join="round"
      />
      <path
        className="m-vehicle-icon__ghost-body"
        d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
        stroke-join="round"
      />
      <ellipse
        className="m-vehicle-icon__ghost-eye"
        cx="19.73"
        cy="22.8"
        rx="3.11"
        ry="3.03"
      />
      <ellipse
        className="m-vehicle-icon__ghost-eye"
        cx="35.29"
        cy="22.8"
        rx="3.11"
        ry="3.03"
      />
    </g>
  </g>
</svg>
`;

exports[`ghost with variant doesn't have eyes 1`] = `
<svg
  style={
    Object {
      "height": 25,
      "width": 27.5,
    }
  }
  viewBox="-13.75 -12.5 27.5 25"
>
  <g
    className="m-vehicle-icon m-vehicle-icon--medium ghost"
  >
    <g
      transform="scale(0.4375) translate(-24,-23)"
    >
      <path
        className="m-vehicle-icon__ghost-highlight"
        d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
        stroke-join="round"
      />
      <path
        className="m-vehicle-icon__ghost-body"
        d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
        stroke-join="round"
      />
    </g>
    <text
      className="m-vehicle-icon__variant"
      dominantBaseline="alphabetic"
      textAnchor="middle"
      x={0}
      y={4.5}
    >
      X
    </text>
  </g>
</svg>
`;

exports[`renders an unwrapped svg node 1`] = `
<svg>
  <g
    className="m-vehicle-icon m-vehicle-icon--medium "
  >
    <rect
      className="m-vehicle-icon__label-background"
      height={11}
      rx={5.5}
      ry={5.5}
      width={40}
      x={-20}
      y={-22.5}
    />
    <text
      className="m-vehicle-icon__label m-vehicle-icon__label--normal"
      dominantBaseline="central"
      textAnchor="middle"
      x="0"
      y={-17}
    >
      label
    </text>
    <path
      className="m-vehicle-icon__triangle"
      d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
      transform="scale(0.625) rotate(180) translate(-24,-22)"
    />
  </g>
</svg>
`;

exports[`renders extended labels 1`] = `
Array [
  <svg
    style={
      Object {
        "height": 64,
        "width": 72,
      }
    }
    viewBox="-36 -20 72 64"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--large "
    >
      <rect
        className="m-vehicle-icon__label-background"
        height={24}
        rx={12}
        ry={12}
        width={72}
        x={-36}
        y={19}
      />
      <text
        className="m-vehicle-icon__label m-vehicle-icon__label--extended"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={31}
      >
        SW-OFF
      </text>
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(1) rotate(0) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 64,
        "width": 72,
      }
    }
    viewBox="-36 -20 72 64"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--large "
    >
      <rect
        className="m-vehicle-icon__label-background"
        height={24}
        rx={12}
        ry={12}
        width={72}
        x={-36}
        y={19}
      />
      <text
        className="m-vehicle-icon__label m-vehicle-icon__label--extended"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={31}
      >
        PULL-B
      </text>
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(1) rotate(0) translate(-24,-22)"
      />
    </g>
  </svg>,
]
`;

exports[`renders in all directions and sizes 1`] = `
Array [
  <svg
    style={
      Object {
        "height": 15.2,
        "width": 16.72,
      }
    }
    viewBox="-8.36 -7.6 16.72 15.2"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--small "
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.38) rotate(0) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 16.72,
        "width": 15.2,
      }
    }
    viewBox="-7.6 -8.36 15.2 16.72"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--small "
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.38) rotate(90) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 15.2,
        "width": 16.72,
      }
    }
    viewBox="-8.36 -7.6 16.72 15.2"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--small "
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.38) rotate(180) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 16.72,
        "width": 15.2,
      }
    }
    viewBox="-7.6 -8.36 15.2 16.72"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--small "
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.38) rotate(270) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 25,
        "width": 27.5,
      }
    }
    viewBox="-13.75 -12.5 27.5 25"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--medium "
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.625) rotate(0) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 27.5,
        "width": 25,
      }
    }
    viewBox="-12.5 -13.75 25 27.5"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--medium "
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.625) rotate(90) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 25,
        "width": 27.5,
      }
    }
    viewBox="-13.75 -12.5 27.5 25"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--medium "
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.625) rotate(180) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 27.5,
        "width": 25,
      }
    }
    viewBox="-12.5 -13.75 25 27.5"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--medium "
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.625) rotate(270) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 40,
        "width": 44,
      }
    }
    viewBox="-22 -20 44 40"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--large "
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(1) rotate(0) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 44,
        "width": 40,
      }
    }
    viewBox="-20 -22 40 44"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--large "
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(1) rotate(90) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 40,
        "width": 44,
      }
    }
    viewBox="-22 -20 44 40"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--large "
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(1) rotate(180) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 44,
        "width": 40,
      }
    }
    viewBox="-20 -22 40 44"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--large "
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(1) rotate(270) translate(-24,-22)"
      />
    </g>
  </svg>,
]
`;

exports[`renders with all statuses 1`] = `
Array [
  <svg
    style={
      Object {
        "height": 25,
        "width": 27.5,
      }
    }
    viewBox="-13.75 -12.5 27.5 25"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--medium on-time"
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.625) rotate(0) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 25,
        "width": 27.5,
      }
    }
    viewBox="-13.75 -12.5 27.5 25"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--medium early"
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.625) rotate(0) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 25,
        "width": 27.5,
      }
    }
    viewBox="-13.75 -12.5 27.5 25"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--medium late"
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.625) rotate(0) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 25,
        "width": 27.5,
      }
    }
    viewBox="-13.75 -12.5 27.5 25"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--medium off-course"
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.625) rotate(0) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 25,
        "width": 27.5,
      }
    }
    viewBox="-13.75 -12.5 27.5 25"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--medium ghost"
    >
      <g
        transform="scale(0.4375) translate(-24,-23)"
      >
        <path
          className="m-vehicle-icon__ghost-highlight"
          d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
          stroke-join="round"
        />
        <path
          className="m-vehicle-icon__ghost-body"
          d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
          stroke-join="round"
        />
        <ellipse
          className="m-vehicle-icon__ghost-eye"
          cx="19.73"
          cy="22.8"
          rx="3.11"
          ry="3.03"
        />
        <ellipse
          className="m-vehicle-icon__ghost-eye"
          cx="35.29"
          cy="22.8"
          rx="3.11"
          ry="3.03"
        />
      </g>
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 25,
        "width": 27.5,
      }
    }
    viewBox="-13.75 -12.5 27.5 25"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--medium "
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.625) rotate(0) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 25,
        "width": 27.5,
      }
    }
    viewBox="-13.75 -12.5 27.5 25"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--medium "
    >
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.625) rotate(0) translate(-24,-22)"
      />
    </g>
  </svg>,
]
`;

exports[`renders with variants and labels 1`] = `
Array [
  <svg
    style={
      Object {
        "height": 26.200000000000003,
        "width": 40,
      }
    }
    viewBox="-20 -7.6 40 26.200000000000003"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--small "
    >
      <rect
        className="m-vehicle-icon__label-background"
        height={11}
        rx={5.5}
        ry={5.5}
        width={40}
        x={-20}
        y={6.6}
      />
      <text
        className="m-vehicle-icon__label m-vehicle-icon__label--normal"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={12.1}
      >
        0617
      </text>
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.38) rotate(0) translate(-24,-22)"
      />
      <text
        className="m-vehicle-icon__variant"
        dominantBaseline="alphabetic"
        textAnchor="middle"
        x={0}
        y={5.6}
      >
        X
      </text>
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 27.72,
        "width": 40,
      }
    }
    viewBox="-20 -8.36 40 27.72"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--small "
    >
      <rect
        className="m-vehicle-icon__label-background"
        height={11}
        rx={5.5}
        ry={5.5}
        width={40}
        x={-20}
        y={7.359999999999999}
      />
      <text
        className="m-vehicle-icon__label m-vehicle-icon__label--normal"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={12.86}
      >
        0617
      </text>
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.38) rotate(90) translate(-24,-22)"
      />
      <text
        className="m-vehicle-icon__variant"
        dominantBaseline="central"
        textAnchor="start"
        x={-5.6}
        y={0}
      >
        X
      </text>
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 26.200000000000003,
        "width": 40,
      }
    }
    viewBox="-20 -18.6 40 26.200000000000003"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--small "
    >
      <rect
        className="m-vehicle-icon__label-background"
        height={11}
        rx={5.5}
        ry={5.5}
        width={40}
        x={-20}
        y={-17.6}
      />
      <text
        className="m-vehicle-icon__label m-vehicle-icon__label--normal"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={-12.100000000000001}
      >
        0617
      </text>
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.38) rotate(180) translate(-24,-22)"
      />
      <text
        className="m-vehicle-icon__variant"
        dominantBaseline="hanging"
        textAnchor="middle"
        x={0}
        y={-5.6}
      >
        X
      </text>
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 27.72,
        "width": 40,
      }
    }
    viewBox="-20 -8.36 40 27.72"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--small "
    >
      <rect
        className="m-vehicle-icon__label-background"
        height={11}
        rx={5.5}
        ry={5.5}
        width={40}
        x={-20}
        y={7.359999999999999}
      />
      <text
        className="m-vehicle-icon__label m-vehicle-icon__label--normal"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={12.86}
      >
        0617
      </text>
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.38) rotate(270) translate(-24,-22)"
      />
      <text
        className="m-vehicle-icon__variant"
        dominantBaseline="central"
        textAnchor="end"
        x={5.6}
        y={0}
      >
        X
      </text>
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 36,
        "width": 40,
      }
    }
    viewBox="-20 -12.5 40 36"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--medium "
    >
      <rect
        className="m-vehicle-icon__label-background"
        height={11}
        rx={5.5}
        ry={5.5}
        width={40}
        x={-20}
        y={11.5}
      />
      <text
        className="m-vehicle-icon__label m-vehicle-icon__label--normal"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={17}
      >
        0617
      </text>
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.625) rotate(0) translate(-24,-22)"
      />
      <text
        className="m-vehicle-icon__variant"
        dominantBaseline="alphabetic"
        textAnchor="middle"
        x={0}
        y={8.5}
      >
        X
      </text>
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 38.5,
        "width": 40,
      }
    }
    viewBox="-20 -13.75 40 38.5"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--medium "
    >
      <rect
        className="m-vehicle-icon__label-background"
        height={11}
        rx={5.5}
        ry={5.5}
        width={40}
        x={-20}
        y={12.75}
      />
      <text
        className="m-vehicle-icon__label m-vehicle-icon__label--normal"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={18.25}
      >
        0617
      </text>
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.625) rotate(90) translate(-24,-22)"
      />
      <text
        className="m-vehicle-icon__variant"
        dominantBaseline="central"
        textAnchor="start"
        x={-8.5}
        y={0}
      >
        X
      </text>
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 36,
        "width": 40,
      }
    }
    viewBox="-20 -23.5 40 36"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--medium "
    >
      <rect
        className="m-vehicle-icon__label-background"
        height={11}
        rx={5.5}
        ry={5.5}
        width={40}
        x={-20}
        y={-22.5}
      />
      <text
        className="m-vehicle-icon__label m-vehicle-icon__label--normal"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={-17}
      >
        0617
      </text>
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.625) rotate(180) translate(-24,-22)"
      />
      <text
        className="m-vehicle-icon__variant"
        dominantBaseline="hanging"
        textAnchor="middle"
        x={0}
        y={-8.5}
      >
        X
      </text>
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 38.5,
        "width": 40,
      }
    }
    viewBox="-20 -13.75 40 38.5"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--medium "
    >
      <rect
        className="m-vehicle-icon__label-background"
        height={11}
        rx={5.5}
        ry={5.5}
        width={40}
        x={-20}
        y={12.75}
      />
      <text
        className="m-vehicle-icon__label m-vehicle-icon__label--normal"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={18.25}
      >
        0617
      </text>
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(0.625) rotate(270) translate(-24,-22)"
      />
      <text
        className="m-vehicle-icon__variant"
        dominantBaseline="central"
        textAnchor="end"
        x={8.5}
        y={0}
      >
        X
      </text>
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 64,
        "width": 72,
      }
    }
    viewBox="-36 -20 72 64"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--large "
    >
      <rect
        className="m-vehicle-icon__label-background"
        height={24}
        rx={12}
        ry={12}
        width={72}
        x={-36}
        y={19}
      />
      <text
        className="m-vehicle-icon__label m-vehicle-icon__label--normal"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={31}
      >
        0617
      </text>
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(1) rotate(0) translate(-24,-22)"
      />
      <text
        className="m-vehicle-icon__variant"
        dominantBaseline="alphabetic"
        textAnchor="middle"
        x={0}
        y={14}
      >
        X
      </text>
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 68,
        "width": 72,
      }
    }
    viewBox="-36 -22 72 68"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--large "
    >
      <rect
        className="m-vehicle-icon__label-background"
        height={24}
        rx={12}
        ry={12}
        width={72}
        x={-36}
        y={21}
      />
      <text
        className="m-vehicle-icon__label m-vehicle-icon__label--normal"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={33}
      >
        0617
      </text>
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(1) rotate(90) translate(-24,-22)"
      />
      <text
        className="m-vehicle-icon__variant"
        dominantBaseline="central"
        textAnchor="start"
        x={-14}
        y={0}
      >
        X
      </text>
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 64,
        "width": 72,
      }
    }
    viewBox="-36 -44 72 64"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--large "
    >
      <rect
        className="m-vehicle-icon__label-background"
        height={24}
        rx={12}
        ry={12}
        width={72}
        x={-36}
        y={-43}
      />
      <text
        className="m-vehicle-icon__label m-vehicle-icon__label--normal"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={-31}
      >
        0617
      </text>
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(1) rotate(180) translate(-24,-22)"
      />
      <text
        className="m-vehicle-icon__variant"
        dominantBaseline="hanging"
        textAnchor="middle"
        x={0}
        y={-14}
      >
        X
      </text>
    </g>
  </svg>,
  <svg
    style={
      Object {
        "height": 68,
        "width": 72,
      }
    }
    viewBox="-36 -22 72 68"
  >
    <g
      className="m-vehicle-icon m-vehicle-icon--large "
    >
      <rect
        className="m-vehicle-icon__label-background"
        height={24}
        rx={12}
        ry={12}
        width={72}
        x={-36}
        y={21}
      />
      <text
        className="m-vehicle-icon__label m-vehicle-icon__label--normal"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={33}
      >
        0617
      </text>
      <path
        className="m-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        transform="scale(1) rotate(270) translate(-24,-22)"
      />
      <text
        className="m-vehicle-icon__variant"
        dominantBaseline="central"
        textAnchor="end"
        x={14}
        y={0}
      >
        X
      </text>
    </g>
  </svg>,
]
`;
